--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "contrib/network_buffer"]
 	path = contrib/network_buffer
 	url = https://github.com/elelel/network_buffer.git
+[submodule "contrib/RxCpp"]
+	path = contrib/RxCpp
+	url = https://github.com/Reactive-Extensions/RxCpp
