ATHENA_HZ_PRIVATE_MSG_NAME from zone

--- a/zone/CMakeLists.txt
+++ b/zone/CMakeLists.txt
@@ -21,6 +21,9 @@ set(CONTRIB "${ARES_DIR}/contrib")
 set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(SOURCES
+  ${SRC}/client/CZ_REQUEST_MOVE.cpp
+  ${SRC}/character_server/ATHENA_HZ_PRIVATE_MSG_NAME.cpp
+
   ${SRC}/main.cpp
   ${SRC}/server.cpp
   ${SRC}/config.cpp
@@ -34,7 +37,7 @@ set(SOURCES
   ${SRC}/character_server/timers.cpp
   ${SRC}/character_server/ATHENA_HZ_LOGIN_RESULT.cpp
   ${SRC}/client/state.cpp
-  ${SRC}/client/CZ_REQUEST_MOVE.cpp
+
   )
 
 if (NOT TARGET config) 
