Manage char<->acc aid authentication

--- a/character/CMakeLists.txt
+++ b/character/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
   ${SRC}/account_server/timers.cpp
   ${SRC}/account_server/ATHENA_AH_LOGIN_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_PING_ACK.cpp
+  ${SRC}/account_server/ATHENA_AH_AID_AUTH_RESULT.cpp
   ${SRC}/mono/state.cpp
   ${SRC}/mono/CH_ENTER.cpp
   ${SRC}/mono/ATHENA_ZH_LOGIN_REQ.cpp
