Handle already logged in case

--- a/character/CMakeLists.txt
+++ b/character/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
   ${SRC}/account_server/ATHENA_AH_PING_ACK.cpp
   ${SRC}/account_server/ATHENA_AH_AID_AUTH_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_ACCOUNT_DATA_RESULT.cpp
+  ${SRC}/account_server/ATHENA_AH_KICK_AID.cpp
   ${SRC}/mono/state.cpp
   ${SRC}/mono/CH_ENTER.cpp
   ${SRC}/mono/ATHENA_ZH_LOGIN_REQ.cpp
