Start CH_SELECT_CHAR

--- a/character/CMakeLists.txt
+++ b/character/CMakeLists.txt
@@ -20,12 +20,7 @@ set(CONTRIB "${ARES_DIR}/contrib")
 set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(SOURCES
-  ${SRC}/client/CH_CHAR_PAGE_REQ.cpp
-  ${SRC}/database/num_chars_for_aid.cpp
-  ${SRC}/database/character_info.cpp
-  ${SRC}/account_server/ATHENA_AH_ACCOUNT_DATA_RESULT.cpp
-  ${SRC}/database/make_char.cpp
-  ${SRC}/client/CH_MAKE_CHAR.cpp
+  ${SRC}/client/CH_SELECT_CHAR.cpp
   
   ${SRC}/main.cpp
   ${SRC}/server.cpp
@@ -39,10 +34,11 @@ set(SOURCES
   ${SRC}/account_server/ATHENA_AH_LOGIN_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_PING_ACK.cpp
   ${SRC}/account_server/ATHENA_AH_AID_AUTH_RESULT.cpp
-
+  ${SRC}/account_server/ATHENA_AH_ACCOUNT_DATA_RESULT.cpp
   ${SRC}/client/state.cpp
   ${SRC}/client/PING.cpp
-
+  ${SRC}/client/CH_MAKE_CHAR.cpp
+  ${SRC}/client/CH_CHAR_PAGE_REQ.cpp
   ${SRC}/account_server/ATHENA_AH_KICK_AID.cpp
   ${SRC}/mono/state.cpp
   ${SRC}/mono/CH_ENTER.cpp
@@ -57,7 +53,9 @@ set(SOURCES
   ${SRC}/database/account_create.cpp
   ${SRC}/database/account_storage.cpp
   ${SRC}/database/account_slots.cpp
-
+  ${SRC}/database/num_chars_for_aid.cpp
+  ${SRC}/database/character_info.cpp
+  ${SRC}/database/make_char.cpp
   )
 
 if (NOT TARGET common) 
