--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -26,6 +26,7 @@ set_target_properties(common PROPERTIES
 set(INCLUDE_DIRS
   ${ARES_INCLUDE_DIRECTORIES}
   ${CONTRIB}/json
+  ${CONTRIB}/asio/include
   ${CONTRIB}/spdlog/include
   )
 
