--- a/zone/CMakeLists.txt
+++ b/zone/CMakeLists.txt
@@ -20,8 +20,6 @@ set(CONTRIB "${ARES_DIR}/contrib")
 set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(SOURCES
-  ${SRC}/character_server/state.cpp
-
   ${SRC}/main.cpp
   ${SRC}/state.cpp
   ${SRC}/server.cpp
@@ -33,7 +31,8 @@ set(SOURCES
   ${SRC}/database/database.cpp
   ${SRC}/database/map_index.cpp
   ${SRC}/mono/state.cpp
-
+  ${SRC}/mono/CZ_ENTER.cpp
+  ${SRC}/character_server/state.cpp
   ${SRC}/character_server/timers.cpp
   ${SRC}/character_server/ATHENA_HZ_LOGIN_RESULT.cpp
   ${SRC}/character_server/ATHENA_HZ_PRIVATE_MSG_NAME.cpp
