--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -24,7 +24,7 @@ set_target_properties(common PROPERTIES
 
 set(INCLUDE_DIRS
   ${ARES_INCLUDE_DIRECTORIES}
-  ${CONTRIB}/json
+  ${CONTRIB}/json/include
   ${CONTRIB}/asio/asio/include
   ${CONTRIB}/spdlog/include
   )
