Get rid of Athena auth exchanges

--- a/character/CMakeLists.txt
+++ b/character/CMakeLists.txt
@@ -21,10 +21,16 @@ set(CONTRIB "${ARES_DIR}/contrib")
 set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(SOURCES
+  ${SRC}/main.cpp
+  ${SRC}/server.cpp
+  ${SRC}/session.cpp
+  ${SRC}/config.cpp
+  ${SRC}/mono/CH_ENTER.cpp
+  ${SRC}/auth_request_manager.cpp
   ${SRC}/account_server/state.cpp  
   ${SRC}/account_server/ATHENA_AH_LOGIN_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_PING_ACK.cpp
-  ${SRC}/account_server/ATHENA_AH_AID_AUTH_RESULT.cpp
+  ${SRC}/account_server/ARES_AH_AID_AUTH_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_ACCOUNT_DATA_RESULT.cpp
   ${SRC}/account_server/ATHENA_AH_KICK_AID.cpp
   ${SRC}/client/state.cpp
@@ -33,7 +39,7 @@ set(SOURCES
   ${SRC}/client/CH_CHAR_PAGE_REQ.cpp
   ${SRC}/client/CH_SELECT_CHAR.cpp
   ${SRC}/mono/state.cpp
-  ${SRC}/mono/CH_ENTER.cpp
+
   ${SRC}/mono/ATHENA_ZH_LOGIN_REQ.cpp
   ${SRC}/zone_server/state.cpp
   ${SRC}/zone_server/ATHENA_ZH_ONLINE_USERS.cpp
@@ -50,10 +56,6 @@ set(SOURCES
   ${SRC}/database/character_info.cpp
   ${SRC}/database/make_char.cpp
   ${SRC}/database/map_index.cpp
-  ${SRC}/main.cpp
-  ${SRC}/server.cpp
-  ${SRC}/session.cpp
-  ${SRC}/config.cpp
   )
 
 if (NOT TARGET common) 
