--- a/zone/CMakeLists.txt
+++ b/zone/CMakeLists.txt
@@ -64,6 +64,8 @@ set(INCLUDE_DIRS
   ${CONTRIB}/memory/include
   ${ARES_DIR})
 
+find_package(ZLIB REQUIRED)
+
 message("Zone server compile definitions: ${ARES_COMPILE_DEFINITIONS}")
 
 add_executable(ares_zone ${SOURCES})
@@ -71,6 +73,6 @@ set_target_properties(ares_zone PROPERTIES
   COMPILE_FLAGS "${ARES_COMPILE_FLAGS}"
   LINK_FLAGS "${ARES_LINK_FLAGS}"
   )
-target_link_libraries(ares_zone foonathan_memory config common database ${ARES_LINK_LIBRARIES})
+target_link_libraries(ares_zone foonathan_memory config common database ${ZLIB_LIBRARIES} stdc++fs ${ARES_LINK_LIBRARIES})
 target_include_directories(ares_zone PRIVATE ${INCLUDE_DIRS})
 target_compile_definitions(ares_zone PRIVATE ${ARES_COMPILE_DEFINITIONS})
