--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -39,6 +39,7 @@ set_target_properties(database PROPERTIES
 set(INCLUDE_DIRS
   ${ARES_INCLUDE_DIRECTORIES}
   ${CONTRIB}/spdlog/include
+  ${CONTRIB}/lzma
   ${MODEL}/include
   )
 
