--- a/zone/CMakeLists.txt
+++ b/zone/CMakeLists.txt
@@ -47,6 +47,7 @@ if (NOT TARGET database)
 endif()
 
 add_subdirectory(${CONTRIB}/memory memory)
+add_subdirectory(${CONTRIB}/lzma lzma)
 
 set(INCLUDE_DIRS
   ${ARES_INCLUDE_DIRECTORIES}
@@ -71,6 +72,6 @@ set_target_properties(ares_zone PROPERTIES
   COMPILE_FLAGS "${ARES_COMPILE_FLAGS}"
   LINK_FLAGS "${ARES_LINK_FLAGS}"
   )
-target_link_libraries(ares_zone foonathan_memory config common database ${ARES_LINK_LIBRARIES})
+target_link_libraries(ares_zone foonathan_memory config common database lzma ${ARES_LINK_LIBRARIES})
 target_include_directories(ares_zone PRIVATE ${INCLUDE_DIRS})
 target_compile_definitions(ares_zone PRIVATE ${ARES_COMPILE_DEFINITIONS})
