--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -21,6 +21,8 @@ set_target_properties(common PROPERTIES
   COMPILE_FLAGS "${ARES_COMPILE_FLAGS}"
   LINK_LIBRARIES "${ARES_LINK_LIBRARIES}"
   LINK_FLAGS "${ARES_LINK_FLAGS}"
+  C_STANDARD 11
+  CXX_STANDARD 17
   )
 
 set(INCLUDE_DIRS
@@ -31,5 +33,6 @@ set(INCLUDE_DIRS
   ${CONTRIB}/lzma
   )
 
+target_link_libraries(common ${ARES_LINK_LIBRARIES})
 target_include_directories(common PRIVATE ${INCLUDE_DIRS})
 target_compile_definitions(common PRIVATE ${ARES_COMPILE_DEFINITIONS})
