--- a/zone/CMakeLists.txt
+++ b/zone/CMakeLists.txt
@@ -78,13 +78,14 @@ set(INCLUDE_DIRS
   ${CONTRIB}/memory/include
   ${ARES_DIR})
 
-message("Zone server compile definitions: ${ARES_COMPILE_DEFINITIONS}")
-
 add_executable(ares_zone ${SOURCES})
 set_target_properties(ares_zone PROPERTIES
   COMPILE_FLAGS "${ARES_COMPILE_FLAGS}"
   LINK_FLAGS "${ARES_LINK_FLAGS}"
+  C_STANDARD 11
+  CXX_STANDARD 17
   )
-target_link_libraries(ares_zone foonathan_memory config common database lzma ${ARES_LINK_LIBRARIES})
+  
+target_link_libraries(ares_zone ${ARES_LINK_LIBRARIES} foonathan_memory common database lzma)
 target_include_directories(ares_zone PRIVATE ${INCLUDE_DIRS})
 target_compile_definitions(ares_zone PRIVATE ${ARES_COMPILE_DEFINITIONS})
