Finish migartion to polymorphic allocators

--- a/account/CMakeLists.txt
+++ b/account/CMakeLists.txt
@@ -79,6 +79,6 @@ set_target_properties(ares_account PROPERTIES
   CXX_STANDARD 17
   )
   
-target_link_libraries(ares_account ${ARES_LINK_LIBRARIES} foonathan_memory common database lzma )
+target_link_libraries(ares_account ${ARES_LINK_LIBRARIES} common database lzma )
 target_include_directories(ares_account PRIVATE ${INCLUDE_DIRS})
 target_compile_definitions(ares_account PRIVATE ${ARES_COMPILE_DEFINITIONS})
