--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "contrib/asio"]
 	path = contrib/asio
 	url = https://github.com/chriskohlhoff/asio.git
+[submodule "contrib/lzma_lite_lib"]
+	path = contrib/lzma_lite_lib
+	url = https://github.com/elelel/lzma_lite_lib.git
